fixing autocomplete highlight in dark mode.

--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -23,7 +23,25 @@ body {
 
 @layer components {
   .input-pplcrm {
-    @apply input input-bordered focus:input-primary invalid:input-error caret-primary w-full placeholder:text-sm;
+    @apply input input-bordered border-gray-200 focus:input-primary invalid:input-error caret-primary w-full placeholder:text-sm;
+  }
+
+  .input-override {
+    &:-webkit-autofill {
+      background: transparent;
+    }
+
+    &:-webkit-autofill:hover {
+      background: transparent;
+    }
+
+    &:-webkit-autofill:focus {
+      background: transparent;
+    }
+
+    &:-webkit-autofill:active {
+      background: transparent;
+    }
   }
 }
 
